<resources>
    <string name="app_name">ChenShop</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_confirm_password">Your password and confirmation password do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_home">ChenShop</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_activity_rate">Rate</string>
    <string name="title_activity_my_rate">Đánh giá của tôi</string>
    <string name="title_activity_product_detail">Chi tiết sản phẩm</string>
    <string name="title_activity_contact">Thông tin tài khoản</string>
    <string name="title_activity_cart">Giỏ hàng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_address_payment">Đăng ký địa chỉ nhận hàng</string>
    <string name="title_confirm_payment">Chọn phương thức thanh toán</string>
    <string name="title_activity_payment">Payment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_payment">Thanh toán</string>
    <string name="title_rate">Đánh giá</string>
    <string name="title_contact">Liên hệ</string>
    <string name="logout">Đăng xuất</string>
    <string name="update">Cập nhật</string>
    <string name="discount">Khuyến mãi</string>
    <string name="activity">Hoạt động</string>

    <string name="title_register">Đăng ký tài khoản</string>
    <string name="title_forgot_pass">Quên mật khẩu</string>
    <string name="tilte_chat">Constore Shop</string>
    <string name="facebook_app_id">1314829685325539</string>
    <string name="fb_login_protocol_scheme">fb1314829685325539</string>
    <string name="login_error">Error during login</string>
    <string name="title_category">Phân loại</string>

    <string name="simsimi_api">b8032d0f-3757-4a26-88d5-46203787f577</string>
</resources>
